--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<p>Hello World</p>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+ <head>
+  <meta charset="utf-8">
+  <title>Title</title>
+  <link href="styles.css" rel="stylesheet" type="text/css" />
+ </head>
+ <body>
+  <h1>Welcome to my Home Page!</h1>
+   <p>My name is Julio Pochet.</p>
+   <p class="hippo">I'm a Thaddeus Stevens student. Pursuing a Software Engineering Degree.</p>
+   <a href="#">Anchor One</a>
+   <a href="#">Anchor Two</a>
+ </body>
+</html>
+
