--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
+<!-- Home page -->
 <html lang="en" dir="ltr">
  <head>
   <meta charset="utf-8">
-  <title>Title</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Home</title>
   <link href="styles.css" rel="stylesheet" type="text/css" />
  </head>
  <body>
@@ -13,4 +16,3 @@
    <a href="#">Anchor Two</a>
  </body>
 </html>
-
