more changes to the h1 of all pages

--- a/blog.html
+++ b/blog.html
@@ -9,10 +9,6 @@
   <link href="styles.css" rel="stylesheet" type="text/css" />
  </head>
  <body>
-  <h1>Welcome to my Home Page!</h1>
-   <p>My name is Julio Pochet.</p>
-   <p class="hippo">I'm a Thaddeus Stevens student. Pursuing a Software Engineering Degree.</p>
-   <a href="#">Anchor One</a>
-   <a href="#">Anchor Two</a>
+  <h1>My Blog</h1>
  </body>
 </html>
