--- a/index.html
+++ b/index.html
@@ -1,16 +1,62 @@
-<!DOCTYPE html>
 <!-- Home page -->
-<html lang="en" dir="ltr">
+<!DOCTYPE html>
+<!-- Language -->
+<html lang="en-US" dir="ltr">
+<!-- HEADER -->
  <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
-  <title>Home</title>
-  <link href="styles.css" rel="stylesheet" type="text/css" />
+   <!-- Character Encoding -->
+   <meta charset="utf-8">
+   <!-- Meta for Microsoft Edge Browser -->
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <!-- @media Breakpoints -->
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <!-- Search Engines Algorithms -->
+   <meta name="author" content="Julio Pochet Edmead">
+   <meta name="description" content="This is my Portfolio Mid-Term project for the class CSET-120: Software Project I"/>
+   <!-- Open Graph Data for Facebook-->
+   <meta property="og:image" content="images/office-mac-laptops.jpg">
+   <meta property="og:description" content="Julio Pochet Edmead is a Thaddeus Stevens College of Technology student, currently enrolled in
+   the Computer Software Engineering Technology program.">
+   <meta property="og:title" content="Professional Portfolio of Julio Pochet Edmead">
+   <!-- Twitter Proprietary Metadata -->
+   <meta name="twitter:title" content="Professional Portfolio of Julio Pochet Edmead">
+   <!-- third-generation iPad with high-resolution Retina display: -->
+   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/favicon.ico">
+   <!-- iPhone with high-resolution Retina display: -->
+   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/favicon.ico">
+   <!-- first- and second-generation iPad: -->
+   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/favicon.ico">
+   <!-- non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
+   <link rel="apple-touch-icon-precomposed" href="images/favicon.ico">
+   <!-- Basic Favicon -->
+   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+   <!-- CSS stylesheet -->
+   <link rel="stylesheet" href="styles.css" type="text/css">
+   <title>Home</title>
  </head>
+<!-- END OF HEADER -->
+<!-- CONTENT -->
  <body>
-  <h1>Welcome to my Home Page!</h1>
+
+   <header class="header">
+    <nav class="nav-bar">
+     <ul class="nav-container">
+      <li><a href="#">HOME</a></li>
+      <li><a href="#">ABOUT</a></li>
+      <li><a href="#">SERVICES</a></li>
+      <ul>
+        <li><a href="#">WEB DESIGN</a></li>
+        <li><a href="#">E-COMMERCE</a></li>
+        <li><a href="#">WEBSITE MARKETING</a></li>
+        <li><a href="#">GRAPHIC DESIGN</a></li>
+      </ul>
+      <li><a href="#">PROJECTS</a></li>
+      <li><a href="#">BLOG</a></li>
+      <li><a href="#">CONTACT</a></li>
+     </ul>
+    </nav>
+   </header>
+
+  <script src="my-js-file.js"></script>
  </body>
 </html>
