--- a/about.html
+++ b/about.html
@@ -1,13 +1,37 @@
-<!DOCTYPE html>
 <!-- About Page -->
-<html lang="en" dir="ltr">
+<!DOCTYPE html>
+<!-- Language -->
+<html lang="en-US" dir="ltr">
  <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
+   <!-- Character Encoding -->
+   <meta charset="utf-8">
+   <!-- Meta for Microsoft Edge Browser -->
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <!-- @media Breakpoints -->
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <!-- Search Engines Algorithms -->
+   <meta name="author" content="Julio Pochet Edmead">
+   <meta name="description" content="This is my Portfolio Mid-Term project for the class CSET-120: Software Project I"/>
+   <!-- Open Graph Data for Facebook-->
+   <meta property="og:image" content="images/office-mac-laptops.jpg">
+   <meta property="og:description" content="Julio Pochet Edmead is a Thaddeus Stevens College of Technology student, currently enrolled in
+   the Computer Software Engineering Technology program.">
+   <meta property="og:title" content="Professional Portfolio of Julio Pochet Edmead">
+   <!-- Twitter Proprietary Metadata -->
+   <meta name="twitter:title" content="Professional Portfolio of Julio Pochet Edmead">
+   <!-- third-generation iPad with high-resolution Retina display: -->
+   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/office-mac-laptops.jpg">
+   <!-- iPhone with high-resolution Retina display: -->
+   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/office-mac-laptops.jpg">
+   <!-- first- and second-generation iPad: -->
+   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/office-mac-laptops.jpg">
+   <!-- non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
+   <link rel="apple-touch-icon-precomposed" href="images/office-mac-laptops.jpg">
+   <!-- Basic Favicon -->
+   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+   <!-- CSS stylesheet -->
+   <link rel="stylesheet" href="styles.css" type="text/css">
   <title>About Me</title>
-  <link href="styles.css" rel="stylesheet" type="text/css" />
  </head>
  <body>
   <h1>About Me</h1>
