--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 
     <nav class="nav-bar">
      <ul class="nav-container">
-      <li><a href="#">About</a></li>
-      <li><a href="#">Skills</a></li>
+      <li><a href="#About">About</a></li>
+      <li><a href="#Skills">Skills</a></li>
       <li><a href="https://github.com/jpochetedmead">Projects</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href=".partfive">Contact</a></li>
      </ul>
     </nav>
    </header>
