--- a/blog.html
+++ b/blog.html
@@ -66,6 +66,13 @@
         </nav>
      </header>
      <!-- END OF HEADER -->
+     
+     <!-- ARTICLES -->
+     <article class="the-java">
+        <h1>Welcome to my website!</h1>
+        <button class="changename">Click here to change your name :)</button>
+     </article>
+     <!-- END OF ARTICLES -->
 
 <!-- FOOTER -->
       <footer class="footer">
