Change Image Name, Fix some errors in the index.html

--- a/index.html
+++ b/index.html
@@ -72,12 +72,16 @@
       </article>
       <article id="about" class="part-one">
          <h1>About Me</h1>
-         <p><img src="images/JPEG_-1871273501 (1).jpg" alt="Julio Pochet"></p>
-         <p>My name is Julio Pochet. I'm 25 years old, born and raised in The Dominican Republic, where I graduated from High School back in 2010. Currently, I'm a Thaddeus Stevens College of Technology student pursuying a Computer Software Engineering Degree.</p>
-         <p>Since I was little, my interests have been Technology, Business, and Justice. I finished highschool at 15, and then I took 2 years off school before coming to the U.S. at 17. When I first came here I didn't know English, so I went to an English as a Second Language program over at HACC. After that I went to YTI (York Technical Institute) and obtained an Associate's in Criminal Justice &amp First Response.</p>
+         <p><img src="images/julio-pochet-tires.jpg" alt="Julio Pochet"></p>
+         <p>My name is Julio Pochet. I'm 25 years old, born and raised in The Dominican Republic, where I graduated from High School back in 2010.
+           Currently, I'm a Thaddeus Stevens College of Technology student pursuying a Computer Software Engineering Degree.</p>
+         <p>Since I was little, my interests have been Technology, Business, and Justice.
+           I finished highschool at 15, and then I took 2 years off school before coming to the U.S. at 17.
+           When I first came here I didn't know English, so I went to an English as a Second Language program over at HACC.
+           After that I went to YTI (York Technical Institute) and obtained an Associate's in Criminal Justice &amp; First Response.</p>
          <p>I wanted to become a Police Officer and follow my father's steps (He's a retired Police Captain in the Dominican Republic).
             However, while I was in college I started a couple of online businesses and started to make decent amount of money all from my cellphone.
-            That's where the "click" came in and I decided that I wanted to learn more about Web &amp Software Development so that I can build more advance ideas from scratch.
+            That's where the "click" came in and I decided that I wanted to learn more about Web &amp; Software Development so that I can build more advance ideas from scratch.
          </p>
          <p>I'm very excited to learn the most that I can at Thaddeus Stevens and take advantage of all my knowledge to achieve the success I came to this country looking for.</p>
          <p>Trust me, if you have me as a partner, you'll have someone very ambitious when it comes to pursuying his dreams.</p>
@@ -103,7 +107,7 @@
       </article>
       <article id="projects" class="part-three">
          <h1>Projects</h1>
-         You can go to <a href="https://github.com/jpochetedmead?tab=repositories" target="_blank">Github</a> to see all my projects.</p>
+         <p>You can go to <a href="https://github.com/jpochetedmead?tab=repositories" target="_blank">Github</a> to see all my projects.</p>
       </article>
       <article id="blog" class="part-four">
          <h1>Blog</h1>
@@ -113,7 +117,7 @@
       <article id="contact" class="part-five">
          <h1>Contact Me</h1>
          <p>If you want to contact me, feel free to send me an email and I'll get back to you as soon as possible.</p>
-         <a href="mailto:jrpochetedmead192@stevenscollege.edu?subject=feedback">Click here to send me an Email!</a>
+         <p><a href="mailto:jrpochetedmead192@stevenscollege.edu?subject=feedback">Click here to send me an Email!</a></p>
       </article>
       <!-- END OF ARTICLES -->
       <!-- FOOTER -->
