--- a/about.html
+++ b/about.html
@@ -61,12 +61,13 @@
               <li><a href="#about">About</a></li>
               <li><a href="#skills">Skills</a></li>
               <li><a href="#projects">Projects</a></li>
+              <li><a href="#blog">Blog</a></li>
               <li><a href="#contact">Contact</a></li>
            </ul>
         </nav>
      </header>
      <!-- END OF HEADER -->
-     
+
      <!-- ARTICLES -->
      <article class="the-java">
         <h1>Welcome to my website!</h1>
