--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <!-- ARTICLES -->
       <article class="the-java">
           <marquee class="marquee-top" behavior="alternate"><h1 class="welcome">Welcome to my website!</h1></marquee>
-         <button>Click here to change your name :)</button>
+         <button class="changename">Click here to change your name :)</button>
       </article>
       <article id="about" class="part-one">
          <h1>About Me</h1>
