add contact form, style the contact form

--- a/index.html
+++ b/index.html
@@ -120,9 +120,17 @@
          <p><a href="https://www.moneyideas101.com/" target="_blank">MoneyIdeas101.com</a></p>
       </article>
       <article id="contact" class="part-five">
-         <h1>Contact Me</h1>
-         <p>If you want to contact me, feel free to send me an email and I'll get back to you as soon as possible.</p>
-         <p><a href="mailto:jrpochetedmead192@stevenscollege.edu?subject=feedback">Click here to send me an Email!</a></p>
+      <h1>Contact Me</h1>
+      <p>Feel free to send me an email and I'll get back to you as soon as possible.</p>
+      <div class="form">
+        <form method="post "action="mailto:jrpochetedmead192@stevenscollege.edu">
+        <input type="text" class="form-control" placeholder="Name">
+        <input type="email" class="form-control" placeholder="Email">
+        <input type="tel" class="form-control" placeholder="Telephone">
+          <textarea class="form-control" rows="3" placeholder="Message"></textarea>
+          <button type="submit" class="btn-contact">Send</button>
+        </form>
+      </div>
       </article>
       <!-- END OF ARTICLES -->
       <!-- FOOTER -->
