--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       </article>
       <article id="projects" class="part-three">
          <h1>Projects</h1>
-         <p>If you want to checkout the projects I have been working on, visit this site:</p>
+         <p>If you want to see the projects that I have been working on, you can checkout all my repositories on here:</p>
          <p><a href="https://github.com/jpochetedmead?tab=repositories" target="_blank">Github</a></p>
       </article>
       <article id="blog" class="part-four">
@@ -121,6 +121,7 @@
       </article>
       <article id="contact" class="part-five">
       <h1>Contact Me</h1>
+      <img class="contact-image" src="images/emojis/call-me-emoji.gif" alt="Contact Me">
       <p>Feel free to send me an email and I'll get back to you as soon as possible.</p>
       <div class="form">
         <form method="post "action="mailto:jrpochetedmead192@stevenscollege.edu">
