add gif to each section, add styles too all the gifs, modify headings styles

--- a/index.html
+++ b/index.html
@@ -90,31 +90,35 @@
       </article>
       <article id="skills" class="part-two">
          <h1 class="skill-header">Skills</h1>
-         <ul class="skills-list">
-            <li>Basic understanding of the Command line.</li>
-            <li>Solid understanding of git and GitHub.</li>
-            <li>Understanding Git Workflows.</li>
-            <li>How to write semantic HTML.</li>
-            <li>Solid foundation of CSS.</li>
-            <li>Basic understanding of JavaScript.</li>
-         </ul>
-
-         <ul class="skills-img">
-            <li><a href="https://en.wikipedia.org/wiki/Command-line_interface" target="_blank"><img src="images/icons/terminal-icon.jpg" alt="Command Line"></a></li>
-            <li><a href="https://git-scm.com/" target="_blank"><img src="images/icons/git-icon.png" alt="Git"></a></li>
-            <li><a href="https://github.com/" target="_blank"><img src="images/icons/github-icon.svg" alt="GitHub"></a></li>
-            <li><a href="https://whatwg.org/" target="_blank"><img src="images/icons/html-icon.png" alt="HTML"></a></li>
-            <li><a href="https://www.w3.org/Style/CSS/" target="_blank"><img src="images/icons/css-icon.png" alt="CSS"></a></li>
-            <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank"><img src="images/icons/javascript-icon.png" alt="JavaScript"></a></li>
-         </ul>
+         <img class="skills-emoji" src="images/emojis/mental-emoji.gif" alt="My Skills">
+         <div class="list-skill-pics">
+           <ul class="skills-list">
+              <li>Basic understanding of the Command line.</li>
+              <li>Solid understanding of git and GitHub.</li>
+              <li>Understanding Git Workflows.</li>
+              <li>How to write semantic HTML.</li>
+              <li>Solid foundation of CSS.</li>
+              <li>Basic understanding of JavaScript.</li>
+           </ul>
+           <ul class="skills-img">
+              <li><a href="https://en.wikipedia.org/wiki/Command-line_interface" target="_blank"><img src="images/icons/terminal-icon.jpg" alt="Command Line"></a></li>
+              <li><a href="https://git-scm.com/" target="_blank"><img src="images/icons/git-icon.png" alt="Git"></a></li>
+              <li><a href="https://github.com/" target="_blank"><img src="images/icons/github-icon.svg" alt="GitHub"></a></li>
+              <li><a href="https://whatwg.org/" target="_blank"><img src="images/icons/html-icon.png" alt="HTML"></a></li>
+              <li><a href="https://www.w3.org/Style/CSS/" target="_blank"><img src="images/icons/css-icon.png" alt="CSS"></a></li>
+              <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank"><img src="images/icons/javascript-icon.png" alt="JavaScript"></a></li>
+           </ul>
+         </div>
       </article>
       <article id="projects" class="part-three">
          <h1>Projects</h1>
+         <img class="projects-emoji" src="images/emojis/working-emoji.gif" alt="Projects">
          <p>If you want to see the projects that I have been working on, you can checkout all my repositories on here:</p>
          <p><a href="https://github.com/jpochetedmead?tab=repositories" target="_blank">Github</a></p>
       </article>
       <article id="blog" class="part-four">
          <h1>Blog</h1>
+         <img class="blog-emoji" src="images/emojis/coffee-time-emoji.gif" alt="">
          <p>You can visit my Blog where I post about Business, Marketing, Technology, etc.</p>
          <p>Here is the link:</p>
          <p><a href="https://www.moneyideas101.com/" target="_blank">MoneyIdeas101.com</a></p>
