Add Scroll to Top Button, make styles of that button match the website colors, button appears on the bottom right.

--- a/index.html
+++ b/index.html
@@ -148,6 +148,8 @@
                <li class="btn"><a href="https://www.instagram.com/julio.pochet/" target="_blank"><img src="images/icons/Instagram.png" alt="Instagram"></a></li>
             </ul>
          </nav>
+         <!-- Scroll Back To Top Button -->
+       <button onclick="topFunction()" id="scroll-top-button" title="Go to top">Top</button>
       </footer>
       <!-- END OF FOOTER -->
       <!-- Link to Script -->
