Change font size, Add comment to styles file.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
       <!-- CSS stylesheet -->
       <link rel="stylesheet" href="styles.css" type="text/css">
 
+      <!-- Link to Script -->
+      <script src="script.js" defer></script>
+
       <title>Home</title>
    </head>
    <!-- CONTENT -->
@@ -152,7 +155,5 @@
        <button onclick="topFunction()" id="scroll-top-button" title="Go to top">Top</button>
       </footer>
       <!-- END OF FOOTER -->
-      <!-- Link to Script -->
-      <script src="script.js"></script>
    </body>
 </html>
