--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
          <p><a href="https://www.moneyideas101.com/" target="_blank">MoneyIdeas101.com</a></p>
       </article>
       <article id="contact" class="part-five">
-      <h1>Contact Me</h1>
+      <h1>Contact</h1>
       <img class="contact-image" src="images/emojis/call-me-emoji.gif" alt="Contact Me">
       <p>Feel free to send me an email and I'll get back to you as soon as possible.</p>
       <div class="form">
