Add more skills, Add more skills icons.

--- a/index.html
+++ b/index.html
@@ -85,31 +85,41 @@
            When I first came here I didn't know English, so I went to an English as a Second Language program over at HACC.
            After that I went to YTI (York Technical Institute) and obtained an Associate's in Criminal Justice &amp; First Response.</p>
          <p>I wanted to become a Police Officer and follow my father's steps (He's a retired Police Captain in the Dominican Republic).
-            However, while I was in college I started a couple of online businesses and started to make decent amount of money all from my cellphone.
+            However, while I was in college I started a couple of online businesses (Affiliate Marketing, Dropshipping, E-Commerce, Car Sharing, Airbnb, etc) and started to make decent amount of money all from my laptop/cellphone.
             That's where the "click" came in and I decided that I wanted to learn more about Web &amp; Software Development so that I can build more advance ideas from scratch.
          </p>
-         <p>I'm very excited to learn the most that I can at Thaddeus Stevens and take advantage of all my knowledge to achieve the success I came to this country looking for.</p>
-         <p>Trust me, if you have me as a partner, you'll have someone very ambitious when it comes to pursuying his dreams.</p>
+         <p>After I graduate from Thaddeus Stevens I know that I'll have too many open doors and career paths to choose from because of my studies and my business ventures experiences.</p>
+         <p>I'm very excited to learn the most that I can at Thaddeus Stevens and take advantage of all my knowledge to achieve the success that I came to this country looking for.</p>
+         <p>Trust me, if you have me as a partner, you'll have someone very ambitious when it comes to pursuit of his dreams.</p>
+         <p>I'm pro-life. I'm anti-racists. I'm all lives matter. I'm Independent. I truly believe that everyone deserve respect, and noone is better than another.</p>
       </article>
       <article id="skills" class="part-two">
          <h1 class="skill-header">Skills</h1>
          <img class="skills-emoji" src="images/emojis/mental-emoji.gif" alt="My Skills">
          <div class="list-skill-pics">
            <ul class="skills-list">
-              <li>Basic understanding of the Command line.</li>
-              <li>Solid understanding of git and GitHub.</li>
-              <li>Understanding Git Workflows.</li>
-              <li>How to write semantic HTML.</li>
-              <li>Solid foundation of CSS.</li>
-              <li>Basic understanding of JavaScript.</li>
+             <li>Proficient in Microsoft Office Suite.</li>
+             <li>Experience with Google Ads.</li>
+             <li>Experience with Facebook Advertising.</li>
+             <li>Experience with Google Analytics.</li>
+             <li>Basic understanding of the Command line.</li>
+             <li>Solid understanding of git and GitHub.</li>
+             <li>Understanding Git Workflows.</li>
+             <li>How to write semantic HTML.</li>
+             <li>Solid foundation of CSS.</li>
+             <li>Basic understanding of JavaScript.</li>
            </ul>
            <ul class="skills-img">
-              <li><a href="https://en.wikipedia.org/wiki/Command-line_interface" target="_blank"><img src="images/icons/terminal-icon.jpg" alt="Command Line"></a></li>
-              <li><a href="https://git-scm.com/" target="_blank"><img src="images/icons/git-icon.png" alt="Git"></a></li>
-              <li><a href="https://github.com/" target="_blank"><img src="images/icons/github-icon.svg" alt="GitHub"></a></li>
-              <li><a href="https://whatwg.org/" target="_blank"><img src="images/icons/html-icon.png" alt="HTML"></a></li>
-              <li><a href="https://www.w3.org/Style/CSS/" target="_blank"><img src="images/icons/css-icon.png" alt="CSS"></a></li>
-              <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank"><img src="images/icons/javascript-icon.png" alt="JavaScript"></a></li>
+             <li><a href="https://www.office.com/" target="_blank"><img src="images/office-suite.jpg" alt="Microsoft Office"></a></li>
+             <li><a href="https://ads.google.com/home/" target="_blank"><img src="images/icons/google-ads-icon.png" alt="Google Ads"></a></li>
+             <li><a href="https://www.facebook.com/business" target="_blank"><img src="images/icons/facebook-ads-icon.jpg" alt="Facebook Ads"></a></li>
+             <li><a href="https://marketingplatform.google.com/about/analytics/" target="_blank"><img src="images/icons/google-analytics.svg" alt="Google Analytics"></a></li>
+             <li><a href="https://en.wikipedia.org/wiki/Command-line_interface" target="_blank"><img src="images/icons/terminal-icon.jpg" alt="Command Line"></a></li>
+             <li><a href="https://git-scm.com/" target="_blank"><img src="images/icons/git-icon.png" alt="Git"></a></li>
+             <li><a href="https://github.com/" target="_blank"><img src="images/icons/github-icon.svg" alt="GitHub"></a></li>
+             <li><a href="https://whatwg.org/" target="_blank"><img src="images/icons/html-icon.png" alt="HTML"></a></li>
+             <li><a href="https://www.w3.org/Style/CSS/" target="_blank"><img src="images/icons/css-icon.png" alt="CSS"></a></li>
+             <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank"><img src="images/icons/javascript-icon.png" alt="JavaScript"></a></li>
            </ul>
          </div>
       </article>
