Add more images to content, Improve media query, Improve content, Improve footer when screen is small.

--- a/index.html
+++ b/index.html
@@ -77,22 +77,31 @@
       </article>
       <article id="about" class="part-one">
          <h1>About Me</h1>
-         <img class="about-me-pic" src="images/julio-pochet-tires.jpg" alt="Julio Pochet">
+         <figure><img class="about-me-pic" src="images/julio-pochet-tires.jpg" alt="Julio Pochet"></figure>
          <p>My name is Julio Pochet. I'm 25 years old, born and raised in The Dominican Republic, where I graduated from High School back in 2010.
            Currently, I'm a Thaddeus Stevens College of Technology student pursuying a Computer Software Engineering Degree.</p>
          <p>Since I was little, my interests have been Technology, Business, and Justice.
-           I finished highschool at 15, and then I took 2 years off school before coming to the U.S. at 17.
-           When I first came here I didn't know English, so I went to an English as a Second Language program over at HACC.
-           After that I went to YTI (York Technical Institute) and obtained an Associate's in Criminal Justice &amp; First Response.</p>
+           I finished highschool at 15, and then I took 2 years off school before coming to the U.S. at 17.</p>
+           <p>Since minors don't get hired in my country, during those two years I started my own food truck business selling Empanadas, Drinks, etc... In which I was able to hire 2 of my friends, then I sold the business once I was about to come to the U.S.</p>
+           <figure><a href="https://en.wikipedia.org/wiki/Empanada" target="_blank"><img src="images/empanadas-dominicanas.jpg" alt="Empanadas Business"></a></figure>
+           <p>When I first came here I didn't know English, so I went to an English as a Second Language program over at HACC.</p>
+           <figure><a href="https://www.hacc.edu/ProgramsandCourses/Programs/English-as-a-Second-Language.cfm" target="_blank"><img src="images/esl-hacc.jpg" alt="English as a Second Language Program - HACC"></a></figure>
+           <p>After that I went to YTI (York Technical Institute) and obtained an Associate's in Criminal Justice &amp; First Response.</p>
+           <figure><a href="https://www.yti.edu/programs/Criminal-Justice.asp" target="_blank"><img src="images/criminal-justice-yti.jpg" alt="Criminal Justice & First Response - YTI"></a></figure>
          <p>I wanted to become a Police Officer and follow my father's steps (He's a retired Police Captain in the Dominican Republic).
-            However, while I was in college I started a couple of online businesses (Affiliate Marketing, Dropshipping, E-Commerce, Car Sharing, Airbnb, etc) and started to make decent amount of money all from my laptop/cellphone.
-            That's where the "click" came in and I decided that I wanted to learn more about Web &amp; Software Development so that I can build more advance ideas from scratch.
-         </p>
-         <p>After I graduate from Thaddeus Stevens I know that I'll have too many open doors and career paths to choose from because of my studies and my business ventures experiences.</p>
-         <p>I'm very excited to learn the most that I can at Thaddeus Stevens and take advantage of all my knowledge to achieve the success that I came to this country looking for.</p>
-         <p>Trust me, if you have me as a partner, you'll have someone very ambitious when it comes to pursuit of his dreams.</p>
+            However, while I was in college I started a couple of online businesses (Affiliate Marketing, Dropshipping, E-Commerce, Car Sharing, Airbnb, Tires &amp; Rims Sales, etc) and started to make decent amount of money all from my laptop/cellphone.</p>
+            <figure><a href="http://job.majormca.com/" target="_blank"><img src="images/mca-affiliate-marketing.jpg" alt="Motor Club of America"></a></figure>
+            <p>That's where the "click" came in and I decided that I wanted to learn more about Web &amp; Software Development so that I can build more advance ideas from scratch.</p>
+         <figure><a href="https://stevenscollege.edu/academics/associate-degrees/computer-software-engineering-technology/" target="_blank"><img src="images/cset-tsct.png" alt="Software Engineering Technology"></a></figure>
+         <p>Once I graduate from Thaddeus Stevens, I know that I'll have too many open doors and career paths to choose from because of my studies and my business ventures experiences.</p>
+         <p>I'm very excited to learn the most that I can at Thaddeus Stevens and take advantage of all my knowledge to achieve the success that I came looking for in this country.</p>
+         <figure><img src="images/bulldogs-tsct.jpg" alt="BullDogs"></figure>
+         <p>Trust me, if you have me as a partner, you'll have someone very ambitious when it comes down to the pursuit of his dreams.</p>
          <p>I'm pro-life. I'm anti-racists. I'm all lives matter. I'm Independent. I truly believe that everyone deserve respect, and noone is better than another.</p>
       </article>
+      <figure>
+        <figcaption></figcaption>
+      </figure>
       <article id="skills" class="part-two">
          <h1 class="skill-header">Skills</h1>
          <img class="skills-emoji" src="images/emojis/mental-emoji.gif" alt="My Skills">
@@ -122,12 +131,16 @@
              <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank"><img src="images/icons/javascript-icon.png" alt="JavaScript"></a></li>
            </ul>
          </div>
+         <figure class="part-two-figure">
+           <img src="images/technical-creative-analytical.png" alt="Technical,Creative and Analytical.">
+         </figure>
       </article>
       <article id="projects" class="part-three">
          <h1>Projects</h1>
          <img class="projects-emoji" src="images/emojis/working-emoji.gif" alt="Projects">
          <p>If you want to see the projects that I have been working on, you can checkout all my repositories on here:</p>
          <p><a href="https://github.com/jpochetedmead?tab=repositories" target="_blank">Github</a></p>
+         <img class="image-part-three" src="images/coding.jpg" alt="HTML, CSS, JAVASCRIPT.">
       </article>
       <article id="blog" class="part-four">
          <h1>Blog</h1>
