--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
          <figure><a href="https://stevenscollege.edu/academics/associate-degrees/computer-software-engineering-technology/" target="_blank"><img src="images/cset-tsct.png" alt="Software Engineering Technology"></a></figure>
          <p>Once I graduate from Thaddeus Stevens, I know that I'll have too many open doors and career paths to choose from because of my studies and my business ventures experiences.</p>
          <p>I'm very excited to learn the most that I can at Thaddeus Stevens and take advantage of all my knowledge to achieve the success that I came looking for in this country.</p>
-         <figure><img src="images/bulldogs-tsct.jpg" alt="BullDogs"></figure>
+         <figure><a href="https://www.bestcolleges.com/features/best-colleges-in-pennsylvania/#best-community-colleges-in-pennsylvania"><img src="images/bulldogs-tsct.jpg" alt="Best Community College in Pennsylvania - Thaddeus Stevens College - BullDogs"></a></figure>
          <p>Trust me, if you have me as a partner, you'll have someone very ambitious when it comes down to the pursuit of his dreams.</p>
          <p>I'm pro-life. I'm anti-racists. I'm all lives matter. I'm Independent. I truly believe that everyone deserve respect, and noone is better than another.</p>
       </article>
@@ -163,8 +163,7 @@
         </form>
       </div>
   <!-- Google Maps -->
-<iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d391112.8316635068!2d-76.5785646941283!3d40.01807393206612!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c61f5016e7129d%3A0x851a1ff93d479dd6!2sLancaster%20County%2C%20PA!5e0!3m2!1sen!2sus!4v1572840947896!5m2!1sen!2sus"
-width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+  <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3054.6423147898718!2d-76.28886460974525!3d40.03876469122934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c624c0ce636911%3A0xba7750557f5602ea!2sThaddeus%20Stevens%20College%20of%20Technology!5e0!3m2!1sen!2sus!4v1572848743804!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 </article>
       <!-- END OF ARTICLES -->
       <!-- FOOTER -->
