Fixed Link to be a _blank

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
          <figure><a href="https://stevenscollege.edu/academics/associate-degrees/computer-software-engineering-technology/" target="_blank"><img src="images/cset-tsct.png" alt="Software Engineering Technology"></a></figure>
          <p>Once I graduate from Thaddeus Stevens, I know that I'll have too many open doors and career paths to choose from because of my studies and my business ventures experiences.</p>
          <p>I'm very excited to learn the most that I can at Thaddeus Stevens and take advantage of all my knowledge to achieve the success that I came looking for in this country.</p>
-         <figure><a href="https://www.bestcolleges.com/features/best-colleges-in-pennsylvania/#best-community-colleges-in-pennsylvania"><img src="images/bulldogs-tsct.jpg" alt="Best Community College in Pennsylvania - Thaddeus Stevens College - BullDogs"></a></figure>
+         <figure><a href="https://www.bestcolleges.com/features/best-colleges-in-pennsylvania/#best-community-colleges-in-pennsylvania" target="_blank"><img src="images/bulldogs-tsct.jpg" alt="Best Community College in Pennsylvania - Thaddeus Stevens College - BullDogs"></a></figure>
          <p>Trust me, if you have me as a partner, you'll have someone very ambitious when it comes down to the pursuit of his dreams.</p>
          <p>I'm pro-life. I'm anti-racists. I'm all lives matter. I'm Independent. I truly believe that everyone deserve respect, and noone is better than another.</p>
       </article>
