Add the home page design to all these other pages, add a under construction comment to the pages.

--- a/web-design.html
+++ b/web-design.html
@@ -1,5 +1,5 @@
 <!-- UNDER CONSTRUCTION, will add a link to it in the home page later on... -->
-<!-- Resume page -->
+<!-- Web Design page -->
 <!DOCTYPE html>
 <!-- Language -->
 <html lang="en-US" dir="ltr">
@@ -50,7 +50,7 @@
       <!-- Link to Script -->
       <script src="script.js" defer></script>
 
-      <title>Resume</title>
+      <title>Web Design</title>
    </head>
    <!-- CONTENT -->
    <body>
